# raumzeit

./: README.md  emergent_geometry_v9a_fast.md  emergent_geometry_v9a_fast.py
causal-set-engine/: AGENTS.md  README.md  WORKFLOW.md  pyproject.toml
causal-set-engine/configs/: diagnostic_demo.yaml
causal-set-engine/docs/: architecture_audit_refactor_plan.md
causal-set-engine/src/causal_set_engine/: __init__.py  __main__.py  cli.py
causal-set-engine/src/causal_set_engine/benchmarks/: __init__.py  benchmark_suite.py  run_benchmarks.py
causal-set-engine/src/causal_set_engine/config/: __init__.py  loaders.py  schema.py
causal-set-engine/src/causal_set_engine/core/: causal_set.py
causal-set-engine/src/causal_set_engine/diagnostics/: basic.py
causal-set-engine/src/causal_set_engine/evaluation/: __init__.py  interval_study.py  layer_profile_study.py  metrics.py  midpoint_scaling_study.py  myrheim_meyer_study.py  sampling.py  scoring.py
causal-set-engine/src/causal_set_engine/experiments/: artifact_aware_scan.py  artifact_proxies.py  decision_metrics.py  growth_family_probe.py  phase2_policy.py  phase2a_probe.py  phase2c_scan.py  run_artifact_aware_scan.py  run_batch_calibration.py  run_diagnostic_demo.py  run_growth_family_probe.py  run_interval_evaluation.py  run_layer_evaluation.py  run_midpoint_evaluation.py  run_myrheim_meyer_evaluation.py  (+4 more)
causal-set-engine/tests/: conftest.py  test_artifact_aware_scan.py  test_artifact_proxies.py  test_benchmarks.py  test_causal_set_core.py  test_cli_root.py  test_compat_shims.py  test_config_loaders.py  test_decision_metrics.py  test_diagnostics_basic.py  test_diagnostics_phase1.py  test_evaluation_helpers.py  test_growth_family_generators.py  test_growth_family_probe.py  test_interval_evaluation_workflow.py  test_layer_evaluation_workflow.py  test_midpoint_evaluation_workflow.py  test_minkowski_2d.py  test_minkowski_higher_dim.py  test_minkowski_null_robustness.py  test_myrheim_meyer_evaluation_workflow.py  test_observables_intervals.py  test_observables_layer_profiles.py  test_observables_midpoint_scaling.py  test_observables_myrheim_meyer.py  test_phase15_robustness.py  test_phase175_decision_metrics.py  test_phase175_size_trend.py  test_phase2_minimal_growth.py  test_phase2_policy.py  test_phase2a_probe.py  test_phase2c_scan.py  test_policy_gate.py  test_size_trend_metrics.py  test_visualization_outputs.py
(+103 files in other folders)
