[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-set-engine"
version = "0.1.0"
description = "Phase-1 causal set calibration engine scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Causal Set Team"}]
dependencies = []


[project.scripts]
causal-set-demo = "causal_set_engine.experiments.run_phase1_demo:main"
causal-set-batch = "causal_set_engine.experiments.run_phase1_batch:main"

[tool.setuptools.packages.find]
where = ["src"]
