[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-set-engine"
version = "0.1.0"
description = "Causal set calibration and probe engine scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Causal Set Team"}]
dependencies = []


[project.scripts]
causal-set-diagnostic-demo = "causal_set_engine.experiments.run_diagnostic_demo:main"
causal-set-batch-calibration = "causal_set_engine.experiments.run_batch_calibration:main"
causal-set-growth-family-probe = "causal_set_engine.experiments.run_growth_family_probe:main"
causal-set-artifact-aware-scan = "causal_set_engine.experiments.run_artifact_aware_scan:main"


[tool.setuptools.packages.find]
where = ["src"]
