[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-set-engine"
version = "0.1.0"
description = "Causal set calibration and probe engine scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Causal Set Team"}]
dependencies = ["matplotlib>=3.7"]


[project.scripts]
causal-set = "causal_set_engine.cli:main"
causal-set-diagnostic-demo = "causal_set_engine.experiments.run_diagnostic_demo:main"
causal-set-batch-calibration = "causal_set_engine.experiments.run_batch_calibration:main"
causal-set-growth-family-probe = "causal_set_engine.experiments.run_growth_family_probe:main"
causal-set-artifact-aware-scan = "causal_set_engine.experiments.run_artifact_aware_scan:main"
causal-set-evaluate-myrheim = "causal_set_engine.experiments.run_myrheim_meyer_evaluation:main"


[tool.setuptools.packages.find]
where = ["src"]
